# simple_video_player

./: CMakeLists.txt  main.cpp  readme.md  widget.cpp  widget.h  widget.ui
include/libavformat/: avformat.h
include/libavutil/: ffversion.h
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
